manifests/pgadmin/06-ingress.yaml
# pgAdmin em https://pgadmin.lan
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: data
  annotations:
    haproxy.org/ingress.class: haproxy
    haproxy.org/ssl-cert-namespace: data
    haproxy.org/ssl-cert: pgadmin-tls
    haproxy.org/timeout-server: "120s"
spec:
  tls:
    - hosts:
        - pgadmin.lan
      secretName: pgadmin-tls
  rules:
    - host: pgadmin.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  name: http
